fixing image bug on iphone x

--- a/style.scss
+++ b/style.scss
@@ -365,7 +365,7 @@ header {
     .icons {
       width: 100%;
       img {
-        width: 120px;
+        width: 100px;
       }
     }
     .about-title {
